shmuel 2024-04-22 18:35:26+03:00 - build 824

1. Refactoring.

shmuel 2024-04-16 14:30:12+03:00 - build 823

1. LuaFAR: add function win.JoinPath.

2. Refactoring.

shmuel 2024-04-12 23:23:51+03:00 - build 822

1. Disable all macro-operations until the plugin is ready.

shmuel 2024-04-09 12:25:58+03:00 - build 821

1. LuaFAR: add new mode (4) to editor.GetString (only numeric values are returned).

shmuel 2024-04-08 00:04:02+03:00 - build 820

1. LuaFAR: refactoring.

shmuel 2024-04-04 18:26:41+03:00 - build 819

1. LuaFAR: fix DM_SETDLGDATA.

2. Reformat the code.

shmuel 2024-04-03 19:49:33+03:00 - build 818

1. LuaFAR: refactoring.

shmuel 2024-04-03 00:03:52+03:00 - build 817

1. LuaFAR: DM_SETDLGDATA returns the previous value (was: returns nothing).

shmuel 2024-04-01 20:34:42+03:00 - build 816

1. LuaFAR: reformat some parts of code.

shmuel 2024-03-17 00:41:21+02:00 - build 815

1. LuaFAR: refactor far.DetectCodePage

shmuel 2024-03-16 22:16:13+02:00 - build 814

1. LuaFAR: add function far.DetectCodePage

shmuel 2024-03-12 22:52:42+02:00 - build 813

1. Fix endless loop in LuaMacro on Far -v nonexistent_file

shmuel 2024-03-01 23:25:12+02:00 - build 812

1. LuaFAR: ACTL_QUIT - Param1 is Far exit code.

shmuel 2024-02-25 00:45:56+02:00 - build 811

1. LuaFAR: DM_SETCHECK accepts also a boolean Param2
   (false=BSTATE_UNCHECKED, true=BSTATE_CHECKED).

shmuel 2024-02-24 14:15:27+02:00 - build 810

1. LuaFAR: add actl global table and functions.

shmuel 2024-02-24 01:08:54+02:00 - build 809

1. LuaFAR: add methods to dialog handle.

shmuel 2024-02-17 00:04:43+02:00 - build 808

1. More fixes.

shmuel 2024-02-16 14:33:22+02:00 - build 807

1. Fix the last commit.

shmuel 2024-02-16 13:01:51+02:00 - build 806

1. LuaFAR: refactoring.

shmuel 2024-02-06 09:34:58+02:00 - build 805

1. LuaFAR: refactoring.

rohitab 2024-02-03 13:39:53+11:00 - build 804

1. LuaFAR: add MOUSE_HWHEELED flag.

shmuel 2024-01-29 05:51:18+02:00 - build 803
