@@ -11139,6 +11139,43 @@ mtime=3776486954
 </article>
 </node>
 <node>
+id=570
+lv=2
+dt=Text
+nm=utf8.reformat
+ctime=3922998217
+mtime=3923000028
+<article>
+#_result = utf8.reformat (pattern, ...)
+#_
+#_**Parameters:**
+#_  pattern : string
+#_  ...     : 0 or more additional arguments
+#_
+#_**Returns:**
+#_  result  : string
+#_
+#_**Description:**
+#_  This function is similar to utf8.format except for char '{' which must
+#_  be written as '%{'.
+#_  
+#_  {1}, {2}, etc. in the pattern are substituted by values corresponding
+#_  to parameters' numbers in the '%s' format.
+#_
+#_  If the number in curly braces is followed by a ':' then this part becomes
+#_  a "%" in the format string. E.g. {3:04d} is replaced by value of the 3-rd
+#_  parameter in the '%04d' format.
+#_
+#_**Note:**
+#_  This is an added function, not present in the original luautf8 library.
+#_
+#_**Example:**
+#_  reformat('Wrong count: {3:10} {1} {3} and {2:.4f}. Ok: %{ %06d %s and %s }',
+#_           111, 222, 'three')
+#_
+</article>
+</node>
+<node>
 id=540
 lv=2
 dt=Text
