@@ -1,3 +1,7 @@
+shmuel 2024-04-23 01:42:17+03:00 - build 825
+
+1. LuaFAR: add function utf8.reformat.
+
 shmuel 2024-04-22 18:35:26+03:00 - build 824
 
 1. Refactoring.
